--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   carousel_slider: ^4.0.0
   google_sign_in: ^6.2.1
   flutter_signin_button: ^2.0.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
