--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     // Declare the dependency for the Cloud Firestore library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation ("com.google.firebase:firebase-firestore")
+    implementation("com.google.firebase:firebase-appcheck-playintegrity")
+    implementation 'com.google.android.play:integrity:1.3.0'
 
     // Ensure consistent Kotlin standard library version
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
