--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_signin_button: ^2.0.0
   provider: ^6.0.0
+  intl_phone_number_input: ^0.7.4
+  intl_phone_field: ^3.1.0
+  pinput: ^5.0.0
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
