--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_in_app_messaging: ^0.8.0+3
   firebase_core: ^3.2.0
   cloud_firestore: ^5.1.0
+  firebase_storage: ^12.1.1
   carousel_slider: ^4.0.0
   google_sign_in: ^6.2.1
   flutter_signin_button: ^2.0.0
@@ -49,6 +50,8 @@ dependencies:
   intl_phone_field: ^3.1.0
   pinput: ^5.0.0
   pin_code_fields: ^8.0.1
+  image_picker: ^1.1.2
+  
 
 dev_dependencies:
   flutter_test:
