--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   share_plus: ^4.0.0
   intl: ^0.19.0
   smooth_page_indicator: ^1.2.0+3
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
